add dto to frontend and fix deps bug

--- a/notes-backend/tsconfig.json
+++ b/notes-backend/tsconfig.json
@@ -20,6 +20,7 @@
     "paths": {
       "@app/*": ["./src/*"],
       "@dto/*": ["../dto/*"],
+      "class-validator": ["./node_modules/class-validator"]
     },
   }
 }
